--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -34,16 +34,21 @@ jobs:
 
           user: blueokanna
           template: classic
-          base: header, activity, community, repositories
+          base: header, community, repositories
           base_indepth: yes
+
+          repositories_affiliations: owner, collaborator, organization_member
+          repositories_forks: yes
+          repositories: 200
+          repositories_batch: 50
 
           config_timezone: Asia/Shanghai
           config_display: large
 
           plugin_languages: yes
-          plugin_languages_indepth: yes
           plugin_languages_details: bytes-size, percentage
           plugin_languages_limit: 5
+          plugin_languages_other: yes
 
           plugin_isocalendar: yes
           plugin_isocalendar_duration: half-year
@@ -52,6 +57,3 @@ jobs:
           plugin_repositories_pinned: 1
           plugin_repositories_starred: 1
           plugin_repositories_order: starred, pinned
-
-          plugin_followup: yes
-          plugin_followup_sections: repositories
