--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -37,6 +37,12 @@ jobs:
             echo "has_token=false" >> "$GITHUB_OUTPUT"
           fi
 
+      - name: Checkout repository
+        if: steps.token.outputs.has_token == 'true'
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
       - name: Generate metrics
         if: steps.token.outputs.has_token == 'true'
         uses: lowlighter/metrics@latest
@@ -44,6 +50,7 @@ jobs:
           filename: assets/metrics.svg
           token: ${{ secrets.METRICS_TOKEN }}
           committer_token: ${{ github.token }}
+          output_action: commit
 
           user: blueokanna
           template: classic
@@ -60,7 +67,7 @@ jobs:
 
           plugin_languages: yes
           plugin_languages_details: bytes-size, percentage
-          plugin_languages_limit: 8
+          plugin_languages_limit: 5
           plugin_languages_other: yes
 
           plugin_isocalendar: yes
