--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -203,7 +203,7 @@ jobs:
         if: steps.token.outputs.has_token != 'true'
         uses: actions/github-script@v7
         with:
-          github-token: ${{ github.token }}
+          github-token: ${{ secrets.METRICS_TOKEN }}
           script: |
             const fs = require('fs');
             const path = require('path');
