--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -77,14 +77,21 @@ jobs:
         if: steps.token.outputs.has_token == 'true'
         uses: actions/github-script@v7
         with:
-          github-token: ${{ secrets.METRICS_TOKEN }}
+          github-token: ${{ github.token }}
           script: |
             const fs = require('fs');
             const path = require('path');
+            const { request } = require('@octokit/request');
 
             const [owner, repo] = process.env.GITHUB_REPOSITORY.split('/');
             const login = 'blueokanna';
             const perPage = 100;
+
+            const dataRequest = request.defaults({
+              headers: {
+                authorization: `bearer ${process.env.METRICS_TOKEN}`,
+              },
+            });
 
             async function fetchAllRepos() {
               let after = null;
@@ -109,10 +116,13 @@ jobs:
                     }
                   }
                 `;
-                const res = await github.graphql(query, { login, perPage, after });
-                const page = res.user.repositories.nodes || [];
+                const { data } = await dataRequest('POST /graphql', {
+                  query,
+                  variables: { login, perPage, after },
+                });
+                const page = data.user.repositories.nodes || [];
                 repos.push(...page);
-                const { hasNextPage, endCursor } = res.user.repositories.pageInfo;
+                const { hasNextPage, endCursor } = data.user.repositories.pageInfo;
                 if (!hasNextPage) break;
                 after = endCursor;
               }
@@ -199,11 +209,46 @@ jobs:
               sha,
             });
 
-      - name: Placeholder (missing METRICS_TOKEN)
+      - name: Bump README cache (images)
+        if: steps.token.outputs.has_token == 'true'
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ github.token }}
+          script: |
+            const { owner, repo } = context.repo;
+            const runId = process.env.GITHUB_RUN_ID;
+            const path = 'README.md';
+
+            const current = await github.rest.repos.getContent({ owner, repo, path });
+            const decoded = Buffer.from(current.data.content, 'base64').toString('utf8');
+
+            const bump = (content, name) => {
+              const re = new RegExp(`assets/${name}\\.svg(?:\\?v=\\d+)?`, 'g');
+              return content.replace(re, `assets/${name}.svg?v=${runId}`);
+            };
+
+            let updated = bump(decoded, 'highlights');
+            updated = bump(updated, 'metrics');
+
+            if (updated === decoded) {
+              core.info('README already up to date; skipping.');
+              return;
+            }
+
+            await github.rest.repos.createOrUpdateFileContents({
+              owner,
+              repo,
+              path,
+              message: `chore: refresh README cache (${runId})`,
+              content: Buffer.from(updated, 'utf8').toString('base64'),
+              sha: current.data.sha,
+            });
+
+      - name: Placeholder
         if: steps.token.outputs.has_token != 'true'
         uses: actions/github-script@v7
         with:
-          github-token: ${{ secrets.METRICS_TOKEN }}
+          github-token: ${{ github.token }}
           script: |
             const fs = require('fs');
             const path = require('path');
