--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -78,20 +78,36 @@ jobs:
         uses: actions/github-script@v7
         with:
           github-token: ${{ github.token }}
+          env:
+            METRICS_TOKEN: ${{ secrets.METRICS_TOKEN }}
           script: |
             const fs = require('fs');
             const path = require('path');
-            const { request } = require('@octokit/request');
 
             const [owner, repo] = process.env.GITHUB_REPOSITORY.split('/');
             const login = 'blueokanna';
             const perPage = 100;
 
-            const dataRequest = request.defaults({
-              headers: {
-                authorization: `bearer ${process.env.METRICS_TOKEN}`,
-              },
-            });
+            if (!process.env.METRICS_TOKEN) {
+              throw new Error('METRICS_TOKEN missing in env');
+            }
+
+            async function requestGraphQL(query, variables) {
+              const res = await fetch('https://api.github.com/graphql', {
+                method: 'POST',
+                headers: {
+                  authorization: `bearer ${process.env.METRICS_TOKEN}`,
+                  'content-type': 'application/json',
+                  'user-agent': 'github-script',
+                },
+                body: JSON.stringify({ query, variables }),
+              });
+              const json = await res.json();
+              if (!res.ok || json.errors) {
+                throw new Error(`GraphQL error: ${res.status} ${res.statusText} ${JSON.stringify(json.errors)}`);
+              }
+              return json.data;
+            }
 
             async function fetchAllRepos() {
               let after = null;
@@ -116,10 +132,7 @@ jobs:
                     }
                   }
                 `;
-                const { data } = await dataRequest('POST /graphql', {
-                  query,
-                  variables: { login, perPage, after },
-                });
+                const data = await requestGraphQL(query, { login, perPage, after });
                 const page = data.user.repositories.nodes || [];
                 repos.push(...page);
                 const { hasNextPage, endCursor } = data.user.repositories.pageInfo;
